--- a/Bachelorarbeit/appendix.tex
+++ b/Bachelorarbeit/appendix.tex
@@ -32,6 +32,7 @@ In Abb. \ref{abb:propellerkennfeld} ist ein Kennfeld von einem APC 10x3 Propelle
 \end{figure}
 
 \section{Motor}
+\label{sec:motormodell}
 Das Motormodell weist eine über das ganze Spektrum der möglichen Betriebspunkte konsistente Verteilung des Motorwirkungsgrades auf (Vgl. Abb. \ref{abb:motormodell}). Der maximale Motorwirkungsgrad wird bei maximaler Spannung und bei maximalen Strom erreicht. Der errechnete Wert stimmt mit einer Genauigkeit von \ensuremath{\pm \SI{2}{\%}} mit den Angaben vom Hersteller überein \cite{axi}.
 
 \begin{figure}[H]
@@ -173,7 +174,7 @@ Im Folgenden ist der Einfluss des ESC-Wirkungsgrades auf den TOC veranschaulicht
 
 
 \section{Verstellpropeller}
-
+\label{sec:vprop_vorgehen}
 \begin{center}
 \begin{figure}[H]
 \begin{struktogramm}(163,160)
@@ -262,7 +263,7 @@ hier nur Wirkungsgrad
 
 
 \section{Getriebe}
-
+\label{sec:getriebe_vorgehen}
 \begin{center}
 \begin{figure}[H]
 \begin{struktogramm}(163,210)
