--- a/Bachelorarbeit/nachbildung.tex
+++ b/Bachelorarbeit/nachbildung.tex
@@ -1,11 +1,11 @@
-\chapter{Nachbildung des Quadrocopterflugs auf \textbf{\SI{10}{km}} Höhe}
+\chapter{Nachbildung des Quadrocopterflugs auf 10 km Höhe}
 \label{chap:nachbildung_des_quadrocopter}
-Mithilfe des Videos \cite{Anderson.2018} und den in der Beschreibung gemachten Angaben, soll der Flug eines Quadrocopters auf \SI{10,2}{km} Höhe im erstellten Tool nachgebildet werden. Es soll dabei die Validität des Modells und die Glaubwürdigkeit des Fluges an sich überprüft werden. 
+Mithilfe des Videos \cite{Anderson.2018} und den in der Beschreibung gemachten Angaben, soll der Flug eines Quadrocopters auf \SI{10,2}{km} Höhe im erstellten Programm nachgebildet werden. Es soll dabei die Validität des Modells und die Glaubwürdigkeit des Fluges an sich überprüft werden. 
 \section{Komponenten des Quadrocopters und Umgebungsbedingungen}
 \label{sec:komponenten} 
-Im Folgenden sind alle technischen Daten, die im Programm eingebracht wurden aufgelistet. Diese sind aus dem Video und den Beschreibungen zu dem Quadrocopter entnommen worden. Fehlende Daten wurden geschätzt oder sind beim Piloten nachgefragt worden.
+Im Folgenden sind alle technischen Daten, die im Programm eingebracht wurden, aufgelistet. Diese sind aus dem Video und den Beschreibungen zu dem Quadrocopter entnommen worden. Fehlende Daten wurden geschätzt oder sind beim Piloten nachgefragt worden.
 \subsubsection{Motor}
-Der verwendete Motor war ein Cobra C2206/ 30 \SI{1400}{KV} \cite{cobramot}. Die technischen Spezifikation des Motors sind in Tab.\ref{tab:mot_cobra_parameter} aufgelistet. Es wurden kleine, schnell drehende Brushless DC Motoren verwendet in Bezug auf den \ensuremath{K_V}-Wert und das Motorgewicht (siehe \ref{tab:mot_cobra_parameter}).
+Der verwendete Motor war ein Cobra C2206/ 30 \SI{1400}{KV} \cite{cobramot}. Die technischen Spezifikation des Motors sind in Tab.\ref{tab:mot_cobra_parameter} aufgelistet. Es wurden kleine, schnell drehende Brushless DC Motoren verwendet in Bezug auf den \ensuremath{K_V}-Wert und das Motorgewicht (siehe Tab. \ref{tab:mot_cobra_parameter}).
 \begin{center}
 	\captionof{table}{Motorparameter des Cobra C2206/ 30 \SI{1400}{KV}}
 	\begin{tabular}{l l l} \hline
@@ -23,9 +23,9 @@ Der verwendete Motor war ein Cobra C2206/ 30 \SI{1400}{KV} \cite{cobramot}. Die 
 Als Propeller wurden 4 Gemfan7038-Propeller \cite{gemfan} eingesetzt. Das sind Propeller mit einem Durchmesser von \SI{7}{in} und einer Steigung von \SI{3,8}{in}. Für diesen Propeller wurde in der Leistungsberechnung ein äquivalenter Propeller aus der APC Datenbank mit dem gleichen Durchmesser und gleicher Steigung verwendet.
 
 \subsubsection{Batterie}
-Die Batterie ist eine selbst gebaute LiIon Batterie in der Bauform 4s3p. Das Gewicht einer Zelle beträgt ca. \SI{46}{g} \cite{batteriezelle}. Mit dieser Angabe, kann das Gesamtgewicht der Batterie sehr gut abgeschätzt werden. Für die nominale und minimale Batteriespannung werden die Werte aus Abschn. \ref{subsec:batteriezustand} verwendet. Die nominale Spannung wird in \cite{batteriezelle} ebenfalls mit \SI{3,7}{V} beziffert. Alle weiteren notwendigen Spezifikationen sind in Tab.\ref{tab:bat_4s3p_parameter} festgehalten.
+Die Batterie ist eine selbst gebaute Li-Ion Batterie in der Bauform 4s3p. Das Gewicht einer Zelle beträgt ca. \SI{46}{g} \cite{batteriezelle}. Mit dieser Angabe, kann das Gesamtgewicht der Batterie sehr gut abgeschätzt werden. Für die nominale und minimale Batteriespannung werden die Werte aus Abschn. \ref{subsec:batteriezustand} verwendet. Die nominale Spannung wird in \cite{batteriezelle} ebenfalls mit \SI{3,7}{V} beziffert. Alle weiteren notwendigen Spezifikationen sind in Tab.\ref{tab:bat_4s3p_parameter} festgehalten.
 \begin{center}
-	\captionof{table}{Batterieparameter der 4s3p Batterie}
+	\captionof{table}{Batterieparameter der 4s3p Li-Ion Batterie}
 	\begin{tabular}{l l l} \hline
 		 Parameter & Variablenname & Wert \\ \hline		 
 		 Anzahl der Batteriezellen \ensuremath{N_{Bat,cell}} & \texttt{N\_bat\_cell} & \SI{4}{} \\
@@ -61,7 +61,7 @@ Weitere Startbedingungen und Missionsparameter sind in Tab.\ref{tab:umgebungs_mi
 \end{center}
 
 
-\section{Ergebnisse}
+\section{Ergebnis der Flugleistungsberechnung}
 \label{sec:ergebnisse_quadrocopter}
 
 Im Nachfolgenden sind die Ergebnisse des Programms in Abb. \ref{abb:ergebnisse_russland} dargestellt. Aus allen Diagrammen ist zu entnehmen, dass der Quadrocopter eine Höhe von mehr als \SI{13000}{m} erreichen kann. Das ist mehr als \SI{3000}{m} höher als die Höhe, die der Quadrocopter im Video erreicht. Mit dem TOC (Top Of Climb) wird sich im Folgenden auf den realen Flug bezogen. Dieser liegt bei \SI{12600}{m}.\\
@@ -73,7 +73,7 @@ Im Nachfolgenden sind die Ergebnisse des Programms in Abb. \ref{abb:ergebnisse_r
 \end{figure}
 Die Restladung der Batterie nimmt mit der Höhe linear ab (Vgl. Abb.\ref{abb:ergebnisse_russland}). Diese erweist sich als einer der die Höhe begrenzenden Leistungsgrößen, da in ca. \SI{13000}{m} Höhe nur noch ein wenig mehr als \SI{0}{\%} Restladung vorhanden sind. Im Video ist weiterhin die verbrauchte Kapazität in \SI{}{mAh} gegeben. Mit dieser und der Gesamtkapazität von allen Zellen kann daraus geschlossen werden, dass der Quadrocopter noch eine Restladung von etwas weniger als \SI{28}{\%} unter idealen Bedingungen am TOC hat. Dieses stimmt beim Ablesen der Restkapazität in \SI{}{\%} bei \SI{10260}{m} aus dem Diagramm annähernd überein. Die berechnete liegt sogar ein wenig unterhalb der realen. \\
 Hiergegen nimmt die Motordrehzahl und damit auch die Propellerdrehzahl leicht, quadratisch zu und erreicht am TOC \SI{17000}{U/min} (Vgl. Abb.\ref{abb:ergebnisse_russland}).  
-Dies entspricht auch der maximalen Drehzahl des APC-Kennfeldes. Ein möglicher Grund für die Begrenzung des Kennfeldes kann die Festigkeit des Propellers sein. Durch Beschleunigungen periodischen Anregungen oder die die Belastung durch die hohe Drehzahl kann ein Versagen des Propellers auftreten. Die Berechnung wird abgebrochen, weil das Kennfeld für Drehzahlen von über \SI{17000}{U/min} keine Daten mehr liefert. Erstaunlicher Weise erreichen sowohl die Restladung und Drehzahl simultan die Minimal- bzw. Maximalwerte (vorher bestimmten Grenzen). Bei realen Flügen ist die Drehzahl des Propellers nicht durch ein Kennfeld begrenzt, sondern durch die Maximaldrehzahl des Motors sowie der Motorspannung und dem Motorstrom oder eben durch die Festigkeit. Es ist daher zu vermuten, dass letztendlich die Restkapazität den limitierenden Faktor für größere Höhen darstellt. Trotz der hohen Propellerdrehzahl erreicht die Blattspitzengeschwindigkeit \ensuremath{M_{tip}} mit Ma = 0,55 keine Ma = 1. \\
+Dies entspricht auch der maximalen Drehzahl des APC-Kennfeldes. Ein möglicher Grund für die Begrenzung des Kennfeldes kann die Festigkeit des Propellers sein. Durch Beschleunigungen periodischen Anregungen oder die die Belastung durch die hohe Drehzahl kann ein Versagen des Propellers auftreten. Die Berechnung wird abgebrochen, weil das Kennfeld für Drehzahlen von über \SI{17000}{U/min} keine Daten mehr liefert. Erstaunlicher Weise erreichen sowohl die Restladung und Drehzahl simultan die Minimal- bzw. Maximalwerte (vorher bestimmten Grenzen). Bei realen Flügen ist die Drehzahl des Propellers nicht durch ein Kennfeld begrenzt, sondern durch die Maximaldrehzahl des Motors sowie der Motorspannung und dem Motorstrom oder eben durch die Festigkeit. Es ist daher zu vermuten, dass letztendlich die Restkapazität den limitierenden Faktor für größere Höhen darstellt. Trotz der hohen Propellerdrehzahl erreicht die Blattspitzengeschwindigkeit \ensuremath{Ma_{tip}} mit Ma = 0,55 keine Ma = 1. \\
 Der aus der Batterie entnommene Strom \ensuremath{I_{Bat}} bleibt innerhalb von \SI{22}{A} und \SI{25}{A} für den im Video erreichten Höhenbereich relativ konstant. \\
 Dies stimmt mit den Beobachtungen aus \cite{Anderson.2018} gut überein. In diesem schwankt der Entladestrom zwischen \SI{21,5}{A} und \SI{25}{A}. \\
 Stimmen die oben genannten Größen mit denen im Video noch relativ gut überein, zeigen sich bei der PWM große Diskrepanzen. Die ermittelte PWM über der Höhe ist beim Start etwa \SI{50}{\%} und steigt im Laufe des Fluges auf ca. \SI{75}{\%} bei \SI{12600}{m}. \\
@@ -84,10 +84,10 @@ Der Vergleich mit dem realen Quadrocopterflug zeigt deutlich, dass die errechnet
 \label{sec:nachbildung_diskussion}
 
 Zusammengenommen wird der Quadrocopterflug in Russland sehr gut in dem Programm wiedergegeben. Die Flugghöhe ist um \SI{3000}{m} höher als die tatsächlich geflogene, jedoch wird in dem Programm die Batterie komplett entladen. Nichtsdestotrotz gibt es auch Abweichung.\\
-Die verbleibende Kapazität im TOC im Programm wird mit Abweichungen von lediglich \ensuremath{\pm\SI{2}{\%}} exakt getroffen. Dies verwundert, da unter anderem der Stromverbrauch zusätzlicher Geräte wie der Motorregler, der Kamera, des Empfängers und anderer nicht in die Kalkulaiton mit einfließen. Außerdem werden dynamische Effekte (Vgl Kap.\ref{sec:vernachlaessigungen_vereinfachungen}) zum Ausgleich von Störungen verursacht durch Böen vernachlässigt. Diese sind in \cite{Anderson.2018} deutlich zu sehen. Als mögliche Ursache können die konservativen Berechnungsmodelle des Motors und des Motorreglers festgestellt werden. Generell wurden die Umgebungsbedingungen, was vor allem die Windgeschwindigkeit und die Atmosphäre betrifft, vereinfacht. Die Windgeschwindigkeit ist in der Nachbildung auf konstante \SI{10}{m/s} gesetzt worden. Auch wurde eine Standardatmosphäre vorausgesetzt wohingegen die reale Atmosphäre abweichen kann. Aus dem Video lässt sich jedoch entnehmen, dass relative Windstille am Flugtag herrschte und lediglich vereinzelte Böen in größeren Höhen in Erscheinung traten. Der Einfluss dieser kann trotzdem als gering eingestuft werden, gerade da die Standardatmosphäre und die konstante Windgeschwindigkeit eine gute Näherung liefern. \\
+Die verbleibende Kapazität am TOC im Programm wird mit Abweichungen von lediglich \ensuremath{\pm\SI{2}{\%}} exakt getroffen. Dies verwundert, da unter anderem der Stromverbrauch zusätzlicher Geräte wie der Motorregler, der Kamera, des Empfängers und anderer nicht in die Kalkulaiton mit einfließen. Außerdem werden dynamische Effekte (Vgl Kap.\ref{sec:vernachlaessigungen_vereinfachungen}) zum Ausgleich von Störungen verursacht durch Böen vernachlässigt. Diese sind in \cite{Anderson.2018} deutlich zu sehen. Als mögliche Ursache können die konservativen Berechnungsmodelle des Motors und des Motorreglers festgestellt werden. Generell wurden die Umgebungsbedingungen, was vor allem die Windgeschwindigkeit und die Atmosphäre betrifft, vereinfacht. Die Windgeschwindigkeit ist in der Nachbildung auf konstante \SI{10}{m/s} gesetzt worden. Auch wurde eine Standardatmosphäre vorausgesetzt wohingegen die reale Atmosphäre abweichen kann. Aus dem Video lässt sich jedoch entnehmen, dass relative Windstille am Flugtag herrschte und lediglich vereinzelte Böen in größeren Höhen in Erscheinung traten. Der Einfluss dieser kann trotzdem als gering eingestuft werden, gerade da die Standardatmosphäre und die konstante Windgeschwindigkeit eine gute Näherung liefern. \\
 Weiterhin ist anzumerken, dass Koriakin mit deutlich abweichenden Steiggeschwindigkeit zu \SI{10}{m/s} aufgestiegen ist. In dem Programm wurde der Endzustand erreicht, wenn \SI{10}{m/s} nicht mehr fliegbar sind. Dabei werden geringere, eventuell noch fliegbare Geschwindigkeiten außer Acht gelassen. Eine kontinuierliche Verringerung der Geschwindigkeit auf \SI{0}{m/s} fand deshalb nicht statt. Unabhängig davon ist die Annahme einer Steiggeschwindigkeit von \SI{10}{m/s} akkurat. Der Steigflug mit dieser Steiggeschwindigkeit auf \SI{10260}{m} dauert \SI{17}{min} und \SI{6}{sec}. Dies ist gerade einmal \SI{11}{sec} kürzer als die tatsächliche Flugzeit von \SI{17}{min} und \SI{17}{sec} zum TOC in \cite{Anderson.2018}.\\
 %Die signifikantesten Unterschiede zwischen Realität und Video sind bei der PWM gegeben, also dem Verhältnis zwischen Motorspannung und nomineller Batteriespannung. Die ermittelte PWM weicht im Schnitt um mehr als \SI{20}{\%} von der realen ab. Eine Ursache kann in dem Verhalten der Batteriespannung unter Last gefunden werden. In dem verwendeten Batteriemodell wird die nominelle Batteriespannung als konstant angesehen. Dieses berücksichtigt nicht den Spannungseinbruch unter Last oder die Spannung in Abhängigkeit des Entladezustandes. Diese Einflüsse beschreibt \cite{Tremblay.2009} in seinem Batteriemodell. Durch diesen Einfluss ist die tatsächliche Spannung geringer als die nominelle. Das könnte erklären, warum die PWM so bedeutend geringer ausfällt als in Wirklichkeit. \\ 
-Die signifikantesten Unterschiede zwischen den im Video gezeigten und den vom Programm berechneten Leistungen sind bei der PWM gegeben, also dem Verhältnis zwischen Motorspannung und nomineller Batteriespannung. Die ermittelte PWM weicht im Schnitt um mehr als \SI{15}{\%} von der realen ab. Selbst die Implementierung eines lastabhängigen Batteriespannungsmodells nach \cite{Tremblay.2009} brachte nur eine Verbesserung von lediglich \SI{5}{\%}. Eine Ursache kann in der Abriegelung der Motorspannung gefunden werden. Da zum Ausgleich von Störeinflüssen und zur Stabilisierung immer noch eine gewisser Leistungsüberschuss gegeben sein muss, wird die PWM ab einem gewissen Wert nach oben hin abgeriegelt. Dies ist der wahrscheinlichste Grund. Weiterhin wird dies auch durchgeführt, um den hohen Schub besser zu kontrollieren, wenn die Batteriespannungen zu hoch für den Motor ist. Dies wäre für einen Flug auf mehr als \SI{10000}{m} Höhe allerdings nachteilig, da die Motorleistung einen wesentlichen Einfluss auf die Höhe hat. Weitere Gründe haben zum Ziel die Flugzeit zu erhöhen oder andere elektronische Komponenten vor zu hohen Batterieströmen zu schützen \cite{arducopter.clav,betaflight,arducopter.mts}.
+Die signifikantesten Unterschiede zwischen den im Video gezeigten und den vom Programm berechneten Leistungen sind bei der PWM gegeben, also dem Verhältnis zwischen Motorspannung und nomineller Batteriespannung. Die ermittelte PWM weicht im Schnitt um mehr als \SI{15}{\%} von der realen ab. Selbst die Implementierung eines lastabhängigen Batteriespannungsmodells nach \cite{Tremblay.2009} brachte nur eine Verbesserung von lediglich \SI{5}{\%}. Eine Ursache kann in der Abriegelung der Motorspannung gefunden werden. Da zum Ausgleich von Störeinflüssen und zur Stabilisierung immer noch eine gewisser Leistungsüberschuss gegeben sein muss, wird die PWM ab einem gewissen Wert nach oben hin abgeriegelt. Dies ist der wahrscheinlichste Grund. Weiterhin wird dies auch durchgeführt, um den hohen Schub besser zu kontrollieren, wenn die Batteriespannungen zu hoch für den Motor ist. Dies wäre für einen Flug auf mehr als \SI{10000}{m} Höhe allerdings nachteilig, da die Motorleistung einen wesentlichen Einfluss auf die Höhe hat. Weitere Gründe haben zum Ziel die Flugzeit zu erhöhen oder andere elektronische Komponenten vor zu hohen Batterieströmen zu schützen \cite{arducopter.clav,arducopter.mts,betaflight}.
 Dieses Verhalten wird in dem Modell nicht berücksichtigt. \\
 Als weitere Einflüsse für die Abweichungen können die in Kap. \ref{sec:vernachlaessigungen_vereinfachungen} genannten Vernachlässigungen und Vereinfachungen aufgelistet werden. Ihr Einfluss auf die Gesamtabweichung kann allerdings als gering eingeschätzt werden.
 % Weitere Einflüsse für die Abweichungen sollen an dieser Stelle noch aufgelistet werden. Ihr Einfluss auf die Gesamtabweichung kann allerdings als gering eingeschätzt werden. \\
