--- a/Bachelorarbeit/Literatur.bib
+++ b/Bachelorarbeit/Literatur.bib
@@ -1,4 +1,4 @@
-﻿% This file was created with Citavi 6.2.0.12
+% This file was created with Citavi 6.2.0.12
 
 @proceedings{.04.07.201707.07.2017,
  year = {04.07.2017 - 07.07.2017},
@@ -21,7 +21,8 @@
  title = {Amazon.com: Prime Air},
  url = {https://www.amazon.com/b?node=8037720011},
  keywords = {Amazon.com;Prime Air},
- urldate = {19.02.2019}
+ urldate = {19.02.2019},
+ note = {Abgerufen am 19.02.2019}
 }
 
 
